--- a/OhioTrackStats.Database/OhioTrackStats.Database.csproj
+++ b/OhioTrackStats.Database/OhioTrackStats.Database.csproj
@@ -119,5 +119,14 @@
   <ItemGroup>
     <EmbeddedResource Include="Scripts\0022 - Insert Meets.sql" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\0023 - Insert Division Enrollments.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\0025 - Insert Division Assignments.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scripts\0024 - Insert Enrollments.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
