--- a/OhioTrackStats/OhioTrackStats.csproj
+++ b/OhioTrackStats/OhioTrackStats.csproj
@@ -64,6 +64,9 @@
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Antlr4.Runtime.Standard, Version=4.7.1.0, Culture=neutral, PublicKeyToken=e78b2c5abd1fcb3f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Antlr4.Runtime.Standard.4.7.1.1\lib\net35\Antlr4.Runtime.Standard.dll</HintPath>
+    </Reference>
     <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
     </Reference>
@@ -194,6 +197,10 @@
     <Compile Include="DataModels\Athlete.cs" />
     <Compile Include="DataModels\AthletePerformance.cs" />
     <Compile Include="DataModels\BaseRecord.cs" />
+    <Compile Include="Grammar\HyTekBaseListener.cs" />
+    <Compile Include="Grammar\HyTekLexer.cs" />
+    <Compile Include="Grammar\HyTekListener.cs" />
+    <Compile Include="Grammar\HyTekParser.cs" />
     <Compile Include="Models\Distance.cs" />
     <Compile Include="Constants\Gender.cs" />
     <Compile Include="DataModels\IRecord.cs" />
@@ -247,6 +254,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Grammar\HyTek.g4" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
