--- a/OhioTrackStats/packages.config
+++ b/OhioTrackStats/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
+  <package id="Antlr4.Runtime.Standard" version="4.7.1.1" targetFramework="net47" />
   <package id="Autofac" version="4.6.2" targetFramework="net47" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net47" />
   <package id="bootstrap" version="4.0.0" targetFramework="net47" />
