--- a/OhioTrackStats/Web.config
+++ b/OhioTrackStats/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="OhioTrackStats" connectionString="Server=MORRIS-DESKTOP;Database=OhioTrackStats;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="OhioTrackStats" connectionString="Server=MORRIS-DESKTOP;Database=OhioTrackStats;User ID=ots;Password=OhioTrackStats1!;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
